--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,6 @@ jobs:
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
-          args: firebase deploy --only hosting
+          args: firebase deploy
         env:
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
