--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^1.18.0
   firebase_storage: ^10.2.18
-  firebase_auth_web: ^3.3.17
+  firebase_auth_web: ^4.4.0
   firebase_auth: ^3.3.20
   cloud_firestore: ^3.1.18
   cloud_functions: ^3.0.5
@@ -42,6 +42,11 @@ dependencies:
   jiffy: ^5.0.0
   rxdart: ^0.27.4
   http: ^0.13.4
+  login:
+    git: 
+      url: https://github.com/amlcloud/flutter-lib.git
+      path: login
+      ref: main_common_login
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +64,7 @@ dev_dependencies:
   permission_handler: ^7.1.0
   fluttertoast: ^8.0.9
   universal_html: ^2.0.8
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
