--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^1.18.0
   firebase_storage: ^10.2.18
-  firebase_auth_web: ^4.4.0
+  firebase_auth_web: ^3.3.17
   firebase_auth: ^3.3.20
   cloud_firestore: ^3.1.18
   cloud_functions: ^3.0.5
@@ -46,7 +46,7 @@ dependencies:
     git: 
       url: https://github.com/amlcloud/flutter-lib.git
       path: login
-      
+  country_picker: ^2.0.16
 
 
 dev_dependencies:
