Updated drawer.dart to use logo package

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,11 +12,10 @@
       "runtimeArgs": [
         "--nolazy"
       ],
-      // "preLaunchTask": "tsc: build - tsconfig.json",
       "outFiles": [
         "${workspaceFolder}/../screensrv/lib/**/*.js"
       ],
-      "sourceMaps": true,
+      "sourceMaps": true
     },
     {
       "name": "Flutter",
@@ -40,6 +39,12 @@
       "request": "launch",
       "type": "dart",
       "flutterMode": "release"
+    },
+    {
+      "name": "Flutter (lib/main.dart)",
+      "type": "dart",
+      "request": "launch",
+      "program": "lib/main.dart"
     }
   ]
 }
