Updated appbar to include logo and theme button

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,11 +46,13 @@ dependencies:
     git: 
       url: https://github.com/amlcloud/flutter-lib.git
       path: login
+      ref: logo-theme
   country_picker: ^2.0.16
   logo:
     git:
       url: https://github.com/amlcloud/flutter-lib.git
       path: logo
+      ref: logo-theme
 
 
 dev_dependencies:
