--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   jiffy: ^5.0.0
   rxdart: ^0.27.4
   http: ^0.13.4
-
+  url_launcher: ^6.1.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
