--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.18.0 <3.0.0"
+  flutter: ">=1.17.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,12 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^1.18.0
-  firebase_storage: ^10.2.18
-  firebase_auth_web: ^3.3.17
-  firebase_auth: ^3.3.20
-  cloud_firestore: ^3.1.18
-  cloud_functions: ^3.0.5
+  firebase_core: ^2.1.1
+  firebase_storage: ^11.0.3
+  firebase_auth_web: ^5.1.0
+  firebase_auth: ^4.1.0
+  cloud_firestore: ^4.0.3
+  cloud_functions: ^4.0.3
   equatable: ^2.0.0
   flutter_riverpod: ^1.0.4
   quiver: ^3.1.0
@@ -42,15 +43,18 @@ dependencies:
   jiffy: ^5.0.0
   rxdart: ^0.27.4
   http: ^0.13.4
+
   login:
     git: 
       url: https://github.com/amlcloud/flutter-lib.git
       path: login
+      ref: main_dependencies_versions
+
   userprofile:
     git: 
       url: https://github.com/amlcloud/flutter-lib.git
       path: userprofile
-      ref: main_avatar
+      ref: main_dependencies_versions
       
 dev_dependencies:
   flutter_test:
