--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
     git:
       url: https://github.com/amlcloud/flutter-lib.git
       path: logo
-
+  url_launcher: ^6.1.6
 
 dev_dependencies:
   flutter_test:
