--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.0.0
   firebase_storage: ^11.0.1
-  firebase_auth_web: ^5.0.1
-  firebase_auth: ^4.0.1
+  firebase_auth_web: 5.0.1
+  firebase_auth: 4.0.1
   cloud_firestore: ^4.0.1
   cloud_functions: ^4.0.1
   equatable: ^2.0.0
