--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.0.0
+  firebase_core: ^2.3.0
+  # firebase_core: ^2.0.0
   firebase_storage: ^11.0.1
-  firebase_auth_web: 5.0.1
-  firebase_auth: 4.0.1
+  # firebase_auth_web: 5.0.1
+  firebase_auth_web: ^5.1.3
+  # firebase_auth: 4.0.1
+  firebase_auth: 4.1.5
   cloud_firestore: ^4.0.1
   cloud_functions: ^4.0.1
   equatable: ^2.0.0
@@ -42,6 +45,7 @@ dependencies:
   jiffy: ^5.0.0
   rxdart: ^0.27.4
   http: ^0.13.4
+  url_launcher: ^6.1.7
   login:
     git: 
       url: https://github.com/amlcloud/flutter-lib.git
@@ -54,11 +58,11 @@ dependencies:
       path: logo
       ref: main_signup
 
-  userprofile:
-    git: 
-      url: https://github.com/amlcloud/flutter-lib.git
-      path: userprofile
-      ref: main_dependencies_versions
+  # userprofile:
+  #   git: 
+  #     url: https://github.com/amlcloud/flutter-lib.git
+  #     path: userprofile
+  #     ref: main_dependencies_versions
       
 dev_dependencies:
   flutter_test:
