--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,11 @@ dependencies:
   firebase_core: ^2.3.0
   # firebase_core: ^2.0.0
   firebase_storage: ^11.0.1
-  # firebase_auth_web: 5.0.1
   firebase_auth_web: ^5.1.3
-  # firebase_auth: 4.0.1
-  firebase_auth: 4.1.5
+  # firebase_auth_web: 5.0.1
+  # firebase_auth_web: ^5.1.3
+  firebase_auth: ^4.1.5
+  # firebase_auth: 4.1.5
   cloud_firestore: ^4.0.1
   cloud_functions: ^4.0.1
   equatable: ^2.0.0
@@ -50,13 +51,8 @@ dependencies:
     git: 
       url: https://github.com/amlcloud/flutter-lib.git
       path: login
-      ref: main_signup
+      ref: main
   country_picker: ^2.0.16
-  logo:
-    git:
-      url: https://github.com/amlcloud/flutter-lib.git
-      path: logo
-      ref: main_signup
   flutter_json_viewer: ^1.0.1
   
   # userprofile:
