--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
       ref: main
   country_picker: ^2.0.16
   flutter_json_viewer: ^1.0.1
+  flutter_launcher_icons: ^0.9.2
   
   # userprofile:
   #   git: 
@@ -123,3 +124,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: EditIconAML
+      fonts:
+        - asset: fonts/EditIconAML.ttf
+        
