--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   country_picker: ^2.0.16
   flutter_json_viewer: ^1.0.1
   flutter_launcher_icons: ^0.9.2
+  state_notifier: ^0.7.2+1
   
   # userprofile:
   #   git: 
