--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_json_viewer: ^1.0.1
   flutter_launcher_icons: ^0.9.2
   state_notifier: ^0.7.2+1
+  flutter_dotenv: ^5.0.2
   
   # userprofile:
   #   git: 
