--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_json_viewer: ^1.0.1
   flutter_launcher_icons: ^0.9.2
   state_notifier: ^0.7.2+1
+  flutter_svg: ^1.1.6  
   
   # userprofile:
   #   git: 
@@ -99,7 +100,8 @@ flutter:
   #   - images/a_dot_ham.jpeg
 
   assets:
-    - assets/
+    - assets/Logo_Dark.svg
+    - assets/Logo_Light.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
