--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 *.ipr
 *.iws
 .idea/
+**/pubspec.lock
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
