--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,11 @@ dependencies:
   firebase_core: ^2.3.0
   # firebase_core: ^2.0.0
   firebase_storage: ^11.0.1
-  firebase_auth_web: ^5.1.3
+  # firebase_auth_web: ^5.1.3
+  firebase_auth_web: ^5.5.0
   # firebase_auth_web: 5.0.1
   # firebase_auth_web: ^5.1.3
-  firebase_auth: ^4.1.5
+  firebase_auth: ^4.6.0
   # firebase_auth: 4.1.5
   cloud_firestore: ^4.0.1
   cloud_functions: ^4.0.1
@@ -77,14 +78,8 @@ dependencies:
     git: 
       url: https://github.com/Super-Fast-Forward/flutter_firebase_framework.git
       path: theme
-      
+            
 
-
-
-
-
-      
-      
       
 dev_dependencies:
   flutter_test:
