--- a/firebase.json
+++ b/firebase.json
@@ -14,7 +14,6 @@
     ]
   },
   "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
+    "rules": "firestore.rules"
   }
 }
