--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Sanctions Screener.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -52,39 +52,35 @@ dependencies:
   flutter_json_viewer: ^1.0.1
   flutter_launcher_icons: ^0.9.2
   state_notifier: ^0.7.2+1
-  flutter_svg: ^1.1.6  
+  flutter_svg: ^1.1.6
   flutter_dotenv: ^5.0.2
   stack_trace: ^1.11.0
   go_router: ^7.1.1
   common:
-    git: 
+    git:
       url: https://github.com/Super-Fast-Forward/flutter_firebase_framework.git
       path: common
   sandbox:
-    git: 
+    git:
       url: https://github.com/Super-Fast-Forward/flutter_firebase_framework.git
       path: sandbox
   # providers:
-  #   git: 
+  #   git:
   #     url: https://github.com/Super-Fast-Forward/flutter_firebase_framework.git
   #     path: providers
   auth:
-    git: 
+    git:
       url: https://github.com/Super-Fast-Forward/flutter_firebase_framework.git
       path: auth
   widgets:
-    git: 
+    git:
       url: https://github.com/Super-Fast-Forward/flutter_firebase_framework.git
       path: widgets
   theme:
-    git: 
+    git:
       url: https://github.com/Super-Fast-Forward/flutter_firebase_framework.git
       path: theme
 
-
-
-
-    
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -101,14 +97,13 @@ dev_dependencies:
   permission_handler: ^7.1.0
   # fluttertoast: ^8.0.9
   universal_html: ^2.0.8
-  clipboard: 
+  clipboard:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -122,6 +117,8 @@ flutter:
   assets:
     - assets/Logo_Dark.svg
     - assets/Logo_Light.svg
+    - assets/.env.development
+    - assets/.env.production
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -148,4 +145,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-        
