--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,9 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^2.3.0
-  # firebase_core: ^2.0.0
   firebase_storage: ^11.0.1
-  # firebase_auth_web: ^5.1.3
   firebase_auth: ^4.6.0
   firebase_auth_web: ^5.5.0
-  # firebase_auth_web: 5.0.1
-  # firebase_auth_web: ^5.1.3
-  # firebase_auth: 4.1.5
   cloud_firestore: ^4.0.1
   cloud_functions: ^4.0.1
   equatable: ^2.0.0
@@ -64,10 +59,10 @@ dependencies:
     git: 
       url: https://github.com/Super-Fast-Forward/flutter_firebase_framework.git
       path: sandbox
-  # providers:
-  #   git: 
-  #     url: https://github.com/Super-Fast-Forward/flutter_firebase_framework.git
-  #     path: providers
+  providers:
+    git: 
+      url: https://github.com/Super-Fast-Forward/flutter_firebase_framework.git
+      path: providers
   auth:
     git: 
       url: https://github.com/Super-Fast-Forward/flutter_firebase_framework.git
@@ -80,7 +75,6 @@ dependencies:
     git: 
       url: https://github.com/Super-Fast-Forward/flutter_firebase_framework.git
       path: theme
-
 
 
 
