--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^2.3.0
-  firebase_storage: ^11.0.1
-  firebase_auth: ^4.6.0
-  firebase_auth_web: ^5.5.0
+  firebase_auth: 4.6.3
+  # firebase_auth_web: ^5.5.3
   cloud_firestore: ^4.0.1
   cloud_functions: ^4.0.1
   equatable: ^2.0.0
